finishing the dashboard and starting the profile page

--- a/app/views/dashboards/history.html.erb
+++ b/app/views/dashboards/history.html.erb
@@ -2,48 +2,15 @@
 
 <div class="outter-container">
   <div>
-    <%= link_to root_path do %>
+    <%= link_to dashboard_path do %>
       <i class="fas fa-arrow-left"></i>
     <% end %>
   </div>
 
   <div class="dashboard-container">
-    <h2>Tickets</h2>
-    <div class="type-amount">
-      <h3>Active</h3>
-      <%= link_to "See all (#{@active_user_sessions.count.count})", active_path, class: "link-dash" %>
-    </div>
-    <% if @active_user_sessions.empty? %>
-      <p>You have no current bookings</p>
-    <% else %>
-    <% session = @active_user_sessions.first %>
-      <p>Session <%= session.id %></p>
-          <div class="dashboard-card">
-            <div class="dashcard-body">
-              <p class="date-time"><%= session.showtime.strftime("%d %b %Y %R") %></p>
-              <h4 class="movie-title"><%= session.movie.name %></h4>
-              <div class="tickets-price-info">
-                <div class="tickets-info">
-                  <i class="fas fa-ticket-alt dashicons"></i>
-                  <h6 class="price"><%= session.bookings.count %></h6>
-                </div>
-                <div class="price-info">
-                  <i class="fas fa-money-bill-alt dashicons"></i>
-                  <h6 class="price"><%= session.base_price %>kr</h6>
-                </div>
-              </div>
-            </div>
-            <%= image_tag("QR.png", class: "QR") %>
-            <%= image_tag("ticket.png", class: "ticketback") %>
-          </div>
-        <% end %>
-
-
-
-
+    <h2>History</h2>
     <div class="type-amount history">
       <h3>History</h3>
-      <%= link_to "See all (#{@past_user_sessions.count.count})", history_path, class: "link-dash" %>
     </div>
       <% if @past_user_sessions.empty? %>
         <p>You have no past bookings</p>
