--- a/app/views/dashboards/history.html.erb
+++ b/app/views/dashboards/history.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="outter-container">
   <div>
     <%= link_to dashboard_path do %>
@@ -8,37 +6,34 @@
   </div>
 
   <div class="dashboard-container">
-    <h2>History</h2>
-    <div class="type-amount history">
-      <h3>History</h3>
+    <h2>Tickets</h2>
+    <div class="type-amount">
+      <h3>Active</h3>
     </div>
-      <% if @past_user_sessions.empty? %>
-        <p>You have no past bookings</p>
-      <% else %>
-        <% @past_user_sessions.each do |session| %>
-          <p>Session <%= session.id %></p>
-          <% session.bookings.each do |booking| %>
-            <div class="dashboard-card">
-              <div class="dashcard-body">
-                <p class="date-time"><%= booking.session.showtime.strftime("%d %b %Y %R") %></p>
-                <h4 class="movie-title"><%= booking.session.movie.name %></h4>
-                <div class="tickets-price-info">
-                  <div class="tickets-info">
-                    <i class="fas fa-ticket-alt dashicons"></i>
-                    <h6 class="price"><%= session.bookings.count %></h6>
-                  </div>
-                  <div class="price-info">
-                    <i class="fas fa-money-bill-alt dashicons"></i>
-                    <h6 class="price"><%= booking.session.base_price %>kr</h6>
-                  </div>
+    <% if @my_bookings.empty? %>
+      <p>You have no current bookings</p>
+    <% else %>
+      <% @my_bookings.each do |session, bookings| %>
+        <p><%= session.room.cinema.name %></p>
+          <div class="dashboard-card">
+            <div class="dashcard-body">
+              <p class="date-time"><%= session.showtime.strftime("%d %b %Y %R") %></p>
+              <h4 class="movie-title"><%= session.movie.name %></h4>
+              <div class="tickets-price-info">
+                <div class="tickets-info">
+                  <i class="fas fa-ticket-alt dashicons"></i>
+                  <h6 class="price"><%= bookings.count %></h6>
                 </div>
-                <%= link_to "See all tickets (#{session.bookings.count})", dashboard_path, class: "link-dash" %>
+                <div class="price-info">
+                  <i class="fas fa-money-bill-alt dashicons"></i>
+                  <h6 class="price"><%= session.base_price %>kr</h6>
+                </div>
               </div>
-              <%= image_tag("QR.png", class: "QR") %>
-              <%= image_tag("ticket.png", class: "ticketback") %>
             </div>
-          <% end %>
-        <% end %>
+            <%= image_tag("QR.png", class: "QR") %>
+            <%= image_tag("ticket.png", class: "ticketback") %>
+          </div>
       <% end %>
+    <% end %>
   </div>
 </div>
