--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -7,7 +7,10 @@
 //   border-radius: 50%;
 // }
 .avatar-bordered {
-  width: 40px;
+  position: absolute;
+  right: 10%;
+  top: 75%;
+  width: 60px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
