--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="container home">
   <div class="logo-home">
-    <%= image_tag("cinemapp_logo.png", class: "logo") %>
+    <%= image_tag("cinemapp_logo.png", class: "animated pulse") %>
   </div>
-
+  <div style="height: 10px"></div>
   <div class="films">
     <h2>Popular films</h2>
     <div id="film-carousel">
@@ -28,7 +28,7 @@
       <% end %>
     </div>
   </div>
-
+  <div style="height: 10px"></div>
   <div class="cinemas">
     <h2>Cinemas</h2>
     <div id="cinema-carousel">
