--- a/app/assets/stylesheets/components/_home-movie-card.scss
+++ b/app/assets/stylesheets/components/_home-movie-card.scss
@@ -20,9 +20,9 @@
   // transform: rotate(90deg);
   height: 50px;
   width: 100px;
-  background-color: $turquoise;
+  background-color: $lightgrey;
   position: absolute;
-  opacity: 0.95;
+  opacity: 0.9;
   border-radius: 5%;
   box-shadow:0 0 10px rgba(255, 255, 255, 0.5);
   left: 0px;
@@ -32,10 +32,10 @@
   .discount {
     margin-top: 15px;
     h2 {
-      color: white;
+      color: $white;
       font-weight: bold;
       opacity: 1;
-      text-shadow: 1px 1px $darkgrey;
+      text-shadow: 1px 1px $turquoise;
     }
   }
 }
@@ -47,21 +47,22 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 45%;
+  height: 50%;
   background: rgb(178,45,12);
-  background: -moz-linear-gradient(0deg, rgba(178,45,12,1) 22%, rgba(178,45,12,1) 44%, rgba(178,45,12,0.7413340336134453) 64%, rgba(178,45,12,0.6516981792717087) 80%, rgba(178,45,12,0) 100%);
-  background: -webkit-linear-gradient(0deg, rgba(178,45,12,1) 22%, rgba(178,45,12,1) 44%, rgba(178,45,12,0.7413340336134453) 64%, rgba(178,45,12,0.6516981792717087) 80%, rgba(178,45,12,0) 100%);
-  background: linear-gradient(0deg, rgba(178,45,12,1) 22%, rgba(178,45,12,1) 44%, rgba(178,45,12,0.7413340336134453) 64%, rgba(178,45,12,0.6516981792717087) 80%, rgba(178,45,12,0) 100%);
+  background: rgb(178,45,12);
+  background: -moz-linear-gradient(0deg, rgba(178,45,12,0.923406862745098) 38%, rgba(178,45,12,0.7665441176470589) 68%, rgba(178,45,12,0.6376925770308124) 81%, rgba(178,45,12,0.4780287114845938) 90%, rgba(178,45,12,0) 98%);
+  background: -webkit-linear-gradient(0deg, rgba(178,45,12,0.923406862745098) 38%, rgba(178,45,12,0.7665441176470589) 68%, rgba(178,45,12,0.6376925770308124) 81%, rgba(178,45,12,0.4780287114845938) 90%, rgba(178,45,12,0) 98%);
+  background: linear-gradient(0deg, rgba(178,45,12,0.923406862745098) 38%, rgba(178,45,12,0.7665441176470589) 68%, rgba(178,45,12,0.6376925770308124) 81%, rgba(178,45,12,0.4780287114845938) 90%, rgba(178,45,12,0) 98%);
 }
-
 .poster-content-text {
-  margin-top: 30px;
-  margin-left: 10px;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
 }
 
 .poster-content-text h5 {
   color: white;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .poster-content-text h2 {
@@ -73,8 +74,9 @@
 
 .poster-content-text h3 {
   color: white;
-  font-size: 14px;
-  opacity: 0.8;
+  font-size: 16px;
+  opacity: 0.9;
+  text-shadow: 0.5px 0.5px $darkergrey;
 }
 
 .original-price {
