--- a/app/assets/stylesheets/pages/_movies-index.scss
+++ b/app/assets/stylesheets/pages/_movies-index.scss
@@ -4,10 +4,34 @@
   text-transform: uppercase;
 }
 
-.browse-link {
+.active-tab {
   font-size: 14px;
   color: $red;
-  text-transform: uppercase;
+  color: white;
+  font-family: Work Sans;
+  font-weight:600;
+  // font-size: 15px;
+  padding: 5px 10px;
+  border-radius: 12px;
+  text-align: center;
+  background: $lightgrey;
+  width:48%;     // This value has to be changed accordingly to the occasion
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.active-button {
+  font-size: 14px;
+  color: $red;
+  color: white;
+  font-family: Work Sans;
+  font-weight:600;
+  // font-size: 15px;
+  padding: 5px 10px;
+  border-radius: 12px;
+  text-align: center;
+  background: $red;
+  width:48%;     // This value has to be changed accordingly to the occasion
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .menu-container {
@@ -19,4 +43,25 @@
 
 .movie-index {
   margin-bottom: 100px;
+}
+
+h1 {
+  font-family: work sans;
+  color: white;
+}
+
+
+.cinema-button {
+  font-size: 12px;
+  color: $red;
+  color: white;
+  font-family: Work Sans;
+  font-weight:300;
+  padding: 5px 10px;
+  border-radius: 8px;
+  text-align: center;
+  background: $red;
+  width:48%;     // This value has to be changed accordingly to the occasion
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  text-transform: uppercase;
 }
