--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 107px;
   background-color: $darkgrey;
-  margin-bottom: 100px;
+  // margin-bottom: 100px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
