--- a/app/assets/stylesheets/components/_checkout.scss
+++ b/app/assets/stylesheets/components/_checkout.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   // height: calc(100vh-100px);
-  // margin-bottom:85px;
+  margin-bottom:150px;
 
   .booking-image {
     width:100%;
