icon size enlarged navbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,6 +5,8 @@
 #navbar-container {
   width: 100%;
   padding: 20px;
+  padding-top: 10px;
+  padding-bottom: 30px;
   ul {
     width: 100%;
     padding: 0px;
@@ -17,6 +19,7 @@
         padding: 0px 0px 0px 0px;
         width: auto;
         height: auto;
+        font-size: 18px;
       }
     }
   }
