--- a/app/assets/stylesheets/components/_dashboard-card.scss
+++ b/app/assets/stylesheets/components/_dashboard-card.scss
@@ -15,6 +15,8 @@
   border-radius: 12px;
   box-shadow: 0 10px 10px -9px black;
   padding: 20px;
+  padding-bottom: 13px;
+  min-height: 150px;
 }
 
 .dashcard-body{
@@ -26,6 +28,7 @@
   font-weight: 600;
   font-size: 12px;
   margin-bottom: 5px;
+  position:relative;
 }
 
 .dashcard-body > p {
@@ -39,6 +42,8 @@
 .movie-title {
   font-family: Work Sans;
   font-weight: 500;
+  margin-top: 20px;
+  max-width: 60%;
 }
 
 h6 {
@@ -49,14 +54,18 @@ h6 {
 }
 
 .date-time {
-  margin-left: 20px;
+  // margin-left: 20px;
   font-family: Work Sans;
   font-weight: 600;
   font-size: 18px;
   text-decoration: overline;
+  position: absolute;
+  top: 10px;
+  left: 20px;
 }
 
 .tickets-price-info{
+  // max-width: 40%;
     .dashicons{
       margin-top: 5px;
       font-size: 20px;
@@ -66,7 +75,7 @@ h6 {
       display:flex;
       .tickets-info{
         display:flex;
-        margin-right:50px;
+        margin-right:30px;
       }
       .price-info{
         display:flex;
@@ -74,11 +83,11 @@ h6 {
     }
 
 .QR {
-    position: relative;
+    position: absolute;
     z-index: 2;
-    top: -12px;
-    right: -4px;
-    width: 28%;
+    top: 30px;
+    right: 20px;
+    width: 26%;
 }
 
 
