--- a/app/views/dashboards/history.html.erb
+++ b/app/views/dashboards/history.html.erb
@@ -11,13 +11,15 @@
       <h3>History</h3>
     </div>
     <% if @my_bookings.empty? %>
+      <div style="height:10px"></div>
       <p>You have no current bookings</p>
     <% else %>
       <% @my_bookings.each do |session, bookings| %>
+          <div style="height:20px"></div>
         <div style="display: flex; justify-content:space-between;">
         <p style="margin-bottom: 0px; font-size: 20px;"><%= session.room.cinema.name %></p>
         <div>
-              <%= link_to cinema_map_path(session.room.cinema), class: 'browse-link' do %>
+              <%= link_to cinema_map_path(session.room.cinema), class: 'active-button' do %>
                 <i class="fas fa-map-marker-alt"></i> Map
               <% end %>
         </div>
