--- a/app/assets/stylesheets/components/_checkout.scss
+++ b/app/assets/stylesheets/components/_checkout.scss
@@ -3,18 +3,14 @@
 // }
 .outer-container {
   position:absolute;
-  top:0;
-  bottom:85px;
   width:100vw;
   display: flex;
   flex-direction: column;
 
-  margin-bottom:100px;
-
   .booking-image {
     width:100%;
     // position: relative;
-    height:65%;
+    height:100%;
   }
 
   .booking-info{
@@ -25,29 +21,46 @@
     background-color: $darkergrey;
     box-shadow: 0px -10px 30px 30px $darkergrey;
     flex-grow: 1;
-    // position:absolute;
-    // bottom: 250px;
+
+    position: -webkit-sticky;
+    position: sticky;
+    margin-bottom: 100px;
+    bottom: 0px;
 
     h2{
       margin-bottom:20px;
-      // font-size: 28px;
+      font-size: 36px;
       font-weight: 700;
     }
     .rowinfo {
       display:flex;
-      #empire{
+      margin-top: 10px;
+      margin-bottom: 10px;
+      border-bottom-style: solid;
+      border-bottom-color: rgba(255,255,255,0.1);
+      border-bottom-left-radius: 10%;
+      border-bottom-right-radius: 10%;
+      .checkout-row-title{
         margin-bottom:0px;
       }
       p {
-        font-size:16px;
+        font-size:20px;
       }
       h4 {
-        font-size:10px;
+        font-size:16px;
       }
       .myicons{
         padding-top: 5px;
         margin-right: 20px;
       }
+    }
+
+    #checkout-row-bottom {
+      border-bottom: none;
+    }
+
+    #checkout-row-showtime {
+      margin-bottom: 20px;
     }
 
     #discount {
