--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,39 +1,41 @@
  <div class="outer-container">
 
-  <%= cl_image_tag("rvygxupdxvaz7abeshjm",
-    crop: :fill, class: "booking-image") %>
+  <%= cl_image_tag(@movie.image, class: "booking-image") %>
 
   <div class="booking-info">
     <div class="infotext">
-      <h2>Joker</h2>
-      <div class="rowinfo">
+      <h2><%= @movie.name %></h2>
+      <div class="rowinfo" id="checkout-row-showtime">
         <i class="far fa-calendar myicons"></i>
-        <p> Friday, 29 nov 2019 | 18:35 - 21:35</p>
+        <p class="checkout-row-title"> <%= @session.showtime.strftime("%A, %d %b %Y | %H:%M") %></p>
       </div>
       <div class="rowinfo">
         <i class="fas fa-map-marker-alt myicons"></i>
         <div>
-          <p id="empire" > Empire bio</p>
-          <h4>Guldbergsgade, Norrebro</h4>
+          <p class="checkout-row-title" > <%= @cinema.name %> </p>
+          <h4><%= @cinema.address %></h4>
         </div>
       </div>
       <div class="rowinfo">
-        <i class="fas fa-map-marker-alt myicons"></i>
+        <i class="fas fa-tasks myicons"></i>
         <div>
-          <p id="state" > Order State</p>
-          <h4><%= @order.state %></h4>
-        </div>
-      </div>
-      <div class="rowinfo">
-        <i class="fas fa-map-marker-alt myicons"></i>
-        <div>
-          <p id="state" > Tickets Amount</p>
-          <h4><%= @order.bookings.count %> tickets</h4>
+          <p class="checkout-row-title" > Order State </p>
+          <h4><%= @order.state.capitalize %></h4>
         </div>
       </div>
       <div class="rowinfo">
         <i class="fas fa-ticket-alt myicons"></i>
-        <p> <%= humanized_money_with_symbol(@order.price) %> </p> <!-- ORDER PRICE ACCESSIBLE IN @ORDER -->
+        <div>
+          <p class="checkout-row-title" > Tickets Amount </p>
+          <h4><%= @order.bookings.count %> tickets</h4>
+        </div>
+      </div>
+      <div class="rowinfo" id="checkout-row-bottom">
+        <i class="fas fa-money-bill-wave myicons"></i>
+        <div>
+          <p class="checkout-row-title"> Price </p> <!-- ORDER PRICE ACCESSIBLE IN @ORDER -->
+          <h4><%= humanized_money_with_symbol(@order.price) %></h4>
+        </div>
       </div>
     </div>
 
@@ -46,10 +48,10 @@
         <a class="btn red-button" href="#">Pay</a>
       </div>
     </div> -->
-    <% if @order.state = "pending" %>
+    <% if @order.state === "pending" %>
       <div class="buttonarea">
 
-         <button id="pay" class="btn red-button payredbutton">Pay <%= humanized_money_with_symbol(@order.price) %></button>
+        <button id="pay" class="btn red-button payredbutton">Pay <%= humanized_money_with_symbol(@order.price) %></button>
 
         <script src="https://js.stripe.com/v3/"></script>
         <script>
@@ -63,6 +65,10 @@
         </script>
 
       </div>
+    <% else %>
+      <%= link_to "See My Tickets", dashboard_path, id: "pay", class: "btn red-button payredbutton" %>
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+      <script>swal("Payment Successful!", "", "success");</script>
     <% end %>
 
   </div>
