--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -19,14 +19,14 @@
       <div class="rowinfo">
         <i class="fas fa-tasks myicons"></i>
         <div>
-          <p class="checkout-row-title" > Order State </p>
+          <p class="checkout-row-title" > Order Status </p>
           <h4><%= @order.state.capitalize %></h4>
         </div>
       </div>
       <div class="rowinfo">
         <i class="fas fa-ticket-alt myicons"></i>
         <div>
-          <p class="checkout-row-title" > Tickets Amount </p>
+          <p class="checkout-row-title" > Ticket Amount </p>
           <h4><%= @order.bookings.count %> tickets</h4>
         </div>
       </div>
