--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,8 +1,11 @@
 <div class="container profile">
   <div class="profile-header">
-    <%= link_to root_path do %>
+    <!-- NO BACK IN PROFILE
+    <%=# link_to root_path do %>
       <i class="fas fa-arrow-left"></i>
-    <% end %>
+    <%# end %>
+    -->
+
     <div class="user-name">
       <h2><%= current_user.name %></h2>
     </div>
