--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
     <li class="nav-item col" id="navbar-root-link">
       <%= link_to root_path, class: "nav-link text-center navbar-tabs" do %><i class="fas fa-home"></i><% end %>
     </li>
-    <li class="nav-item col" id="navbar-movies-link">
+    <li class="nav-item col" id="navbar-search-link">
       <%= link_to movies_path, class: "nav-link text-center navbar-tabs" do %><i class="fas fa-search"></i><% end %>
     </li>
     <li class="nav-item col" id="navbar-dashboard-link">
