--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,15 +6,17 @@
   <div class="films">
     <h2>Popular films</h2>
     <div id="film-carousel">
-      <% @movies.each do |movie| %>
+      <% @movies.first(5).each do |movie| %>
         <div class="home-movie-poster">
           <%= link_to movie_sessions_path(movie), class: 'movie-card' do %>
              <%= cl_image_tag movie.image %>
-          <div class="discount-highlight">
-            <div class="discount">
-              <h2><%= @sessions.first&.current_discounted_price.second.to_i %>% off</h2>
-            </div>
-          </div>
+            <% if movie.sessions != [] %>
+              <div class="discount-highlight">
+                <div class="discount">
+                  <h2><%= movie.sessions.first&.current_discounted_price.second.to_i %>% off</h2>
+                </div>
+              </div>
+            <% end %>
             <div class="poster-content">
               <div class="poster-content-text">
                 <h2><%= movie.name %></h2>
