--- a/app/assets/stylesheets/components/_checkout.scss
+++ b/app/assets/stylesheets/components/_checkout.scss
@@ -8,6 +8,8 @@
   flex-direction: column;
 
   .booking-image {
+    position: sticky;
+    top: 0;
     width:100%;
     // position: relative;
     height:100%;
@@ -20,31 +22,31 @@
     width:100%;
     background-color: $darkergrey;
     box-shadow: 0px -10px 30px 30px $darkergrey;
-    flex-grow: 1;
+    // flex-grow: 1;
 
     position: -webkit-sticky;
     position: sticky;
     margin-bottom: 100px;
-    bottom: 0px;
+    bottom: 100px;
 
     h2{
       margin-bottom:20px;
-      font-size: 36px;
+      font-size: 24px;
       font-weight: 700;
     }
     .rowinfo {
       display:flex;
-      margin-top: 10px;
-      margin-bottom: 10px;
+      margin-top: 5px;
+      margin-bottom: 5px;
 
       .checkout-row-title{
         margin-bottom:0px;
       }
       p {
-        font-size:20px;
+        font-size:18px;
       }
       h4 {
-        font-size:16px;
+        font-size:14px;
         color: $lightergrey;
         opacity: 0.8;
       }
