--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div style="height: 10px"></div>
   <div class="films">
-    <h2>Popular films</h2>
+    <h4>Popular films</h4>
     <div id="film-carousel">
       <% @movies.first(3).each do |movie| %>
         <div class="home-movie-poster">
@@ -18,7 +18,7 @@
               </div>
             <div class="poster-content">
               <div class="poster-content-text">
-                <h2><%= movie.name %></h2>
+                <h2 class="movie-home-title"><%= movie.name %></h2>
                 <h5><%= movie.sessions.first&.room&.cinema&.name %></h5>
                 <h5><%= movie.sessions.first&.showtime&.strftime("%d/%m %H:%M") %></h5>
                 <h3><i class="fas fa-tags"></i> <span class="original-price"><%= movie.sessions.first&.base_price %> kr</span> | <%= movie.sessions.first&.current_discounted_price.first %> kr </h3>
@@ -32,7 +32,7 @@
   </div>
   <div style="height: 10px"></div>
   <div class="cinemas">
-    <h2>Cinemas</h2>
+    <h4>Cinemas</h4>
     <div id="cinema-carousel">
       <% @cinemas.each do |cinema| %>
         <div class="home-cinema-card">
