--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,4 +14,4 @@ $lightergrey: #e2e2e2;
 $lightgrey: #c4c4c4;
 $darkgrey: #6d6d6d;
 $darkergrey: #424242;
-$turquoise: #41D3BD;
+$turquoise: #0CB37C;
