--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -3,7 +3,7 @@
   <div class="dashboard-container">
     <h2>Tickets</h2>
     <div class="type-amount">
-      <h3>Next events</h3>
+      <h3>Next event</h3>
       <%= link_to "Show active (#{@active_user_sessions.count.count})", active_path, class: "link-dash" %>
     </div>
     <% if @active_user_sessions.empty? %>
@@ -37,13 +37,13 @@
 
 
     <div class="type-amount history">
-      <h3>Past events</h3>
+      <h3>Last event</h3>
       <%= link_to "History (#{@past_user_sessions.count.count})", history_path, class: "link-dash" %>
     </div>
      <% if @past_user_sessions.empty? %>
       <p>You have no current bookings</p>
     <% else %>
-    <% session = @past_user_sessions.first %>
+    <% session = @past_user_sessions.last %>
         <% booking = session.bookings.first %>
           <div class="dashboard-card">
             <div class="dashcard-body">
@@ -56,7 +56,7 @@
                 </div>
                 <div class="price-info">
                   <i class="fas fa-money-bill-alt dashicons"></i>
-                  <h6 class="price"><%= session.base_price %>kr</h6>
+                  <h6 class="price"><%= session.current_discounted_price[0]  %>kr</h6>
                 </div>
               </div>
             </div>
