--- a/app/views/cinemas/_info_window.html.erb
+++ b/app/views/cinemas/_info_window.html.erb
@@ -1,3 +1,3 @@
 <h2><%= @cinema.name %></h2>
 <p><%= @cinema.address %></p>
-<p><%= link_to "take me there", "https://www.google.com/maps/dir/Le+Wagon+Copenhagen,+Ahornsgade,+Copenhagen+Municipality/Empire+Cinema,+Guldbergsgade+29F,+2200+K%C3%B8benhavn/@55.6919017,12.5565405,18z/data=!3m1!4b1!4m14!4m13!1m5!1m1!1s0x4652531d826ddca1:0xbd20289f8902cd62!2m2!1d12.5596301!2d55.6915195!1m5!1m1!1s0x465253aafc260e13:0x551d83ab11eff35b!2m2!1d12.5558093!2d55.6918616!3e2"%></p>
+<p><%= link_to "Take me there!", @cinema.map_url%></p>
