--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -24,7 +24,7 @@
                 </div>
                 <div class="price-info">
                   <i class="fas fa-money-bill-alt dashicons"></i>
-                  <h6 class="price"><%= session.base_price %>kr</h6>
+                  <h6 class="price"><%= session.current_discounted_price[0] * session.bookings.count %>kr</h6>
                 </div>
               </div>
             </div>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="price-info">
                   <i class="fas fa-money-bill-alt dashicons"></i>
-                  <h6 class="price"><%= session.current_discounted_price[0]  %>kr</h6>
+                  <h6 class="price"><%= session.current_discounted_price[0] * session.bookings.count %>kr</h6>
                 </div>
               </div>
             </div>
