--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,20 +15,21 @@
       width: 70%;
     }
   }
-  h2 {
-    font-family: work sans;
-    color: $lightergrey;
-    margin-bottom: 10px;
-    color: white;
-    font-size: 20px;
-    font-weight: 600;
-    text-shadow: 1px 1px $darkergrey;
-  }
+  // h2 {
+  //   font-family: work sans;
+  //   color: $lightergrey;
+  //   margin-bottom: 10px;
+  //   color: white;
+  //   font-size: 20px;
+  //   font-weight: 600;
+  //   text-shadow: 1px 1px $darkergrey;
+  // }
   h4 {
     font-family: work sans;
-    font-size: 18px;
+    font-size: 20px;
     color: $lightergrey;
     margin-bottom: 15px;
+    margin-left: 15px;
   }
 }
 
